Made AgentState changes thread-safe. Fixed duplicated memory sections